# xgridfit-3

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
Python/: lengthen.py  shorten.py  xgridfit.py
Schemas/: xgridfit-sh.rnc  xgridfit-sh.rng  xgridfit-sh.xsd  xgridfit-simple.rnc  xgridfit-simple.rng  xgridfit.rnc  xgridfit.rng  xgridfit.xsd  xi.xsd  xml.xsd
XSL/: arithmetic-sh.xsl  arithmetic.xsl  compact.xsl  compact.xsl.bak  cvar-sh.xsl  cvar-tuple-sh.xsl  delta-sh.xsl  delta.xsl  expand.xsl  expand.xsl.old  expressions-sh.xsl  expressions.xsl  flow-sh.xsl  flow.xsl  func-predef-sh.xsl  func-predef.xsl  function-sh.xsl  function.xsl  graphics-sh.xsl  graphics.xsl  measure-sh.xsl  measure.xsl  messages-sh.xsl  messages.xsl  misc-sh.xsl  misc.xsl  move-els-sh.xsl  move-els.xsl  move-lib-sh.xsl  move-lib.xsl  numbers-sh.xsl  numbers.xsl  points-sh.xsl  points.xsl  prep-sh.xsl  prep.xsl  primitives-sh.xsl  primitives.xsl  pt2pt.xsl  std-vars-sh.xsl  (+4 more)
doc/: .~lock.Xgridfit-element-reference.odt#  .~lock.Xgridfit-reference.odt#  Xgridfit-element-reference.odt  Xgridfit-reference.odt
examples/: Elstob-italic.xgf  Elstob-roman.xgf  xgfexec
scripts/: display_and_copy_coordinates.py
src/xgridfit/: __init__.py  version.py  xgfUFOWriter.py  xgridfit-backup.py  xgridfit.py  ygridfit.py
work/: Elstob-roman.xgf  out.py  schemas.xml  xgfexec
xgridfit/: __init__.py  macfuncDialog.py  version.py  window.py  xgridfit.py  ygEditor.py  ygHintEditor.py  ygModel.py  ygPreferences.py  ygPreview.py  ygridfit.py
xgridfit/Schemas/: xgridfit-sh.rnc  xgridfit-sh.rng  (+3 more)
(+29 files in other folders)
