[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xgridfit"
version = "3.2.6"
authors = [
    { name="Peter S. Baker", email="b.tarde@mail.com" },
]
description = "An XML-based hinting language for TrueType fonts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml >= 4.8.8",
    "fonttools >= 4.38.0",
    "setuptools >= 65.5.1",
    "PyYAML >= 6.0",
]

[project.scripts]
    xgridfit = "xgridfit.xgridfit:main"
